<resources>
    <string name="app_name">Vko10</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="writeable">Writeable</string>
    <string name="readable">Readable</string>
    <string name="settings">Settings</string>
    <string name="settings_menu">Settings menu</string>
    <string name="text_size">Text size:</string>
    <string name="text_colour">Text colour:</string>
    <string name="background_colour">Background colour:</string>
    <string name="textbox_height">Textbox height:</string>
    <string name="language">Language:</string>
    <string name="display_text">Display text</string>
    <string name="apply_changes">Apply changes</string>
    <string name="defaultt">Default</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="blue">Blue</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="magenta">Magenta</string>
    <string name="disable_editing">Disable editing</string>
    <string name="allow_editing">Enable editing</string>

</resources>